[build-system]
   requires = ["setuptools>=61.0"]
   build-backend = "setuptools.build_meta"

   [project]
   name = "haywire"
   version = "0.1.1"
   authors = [
     { name="Scott Windsor", email="windsorwindsor2@protonmail.com" },
   ]
   description = "Calculations for welded wire mesh sheets."
   readme = "README.md"
   license = { file = "LICENSE.txt" }
   requires-python = ">=3.7"
   classifiers = [
       "Programming Language :: Python :: 3",
       "License :: OSI Approved :: MIT License",
       "Operating System :: OS Independent",
       "Topic :: Scientific/Engineering"
   ]

   [project.urls]
   "Homepage" = "https://github.com/windsorwindsor2/haywire"
   

   